# peronal_finance_manager

./: Cargo.toml  LICENSE  README.md  finance_manager.db
src/: cli.rs  database.rs  main.rs  reports.rs
